solve the problem with wrong width of divs and fixed adding tasks

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -45,13 +45,14 @@ body {
 
 .checkbox.strikethrough {
     background-color: #fff;
-    animation: hideText 1s ease 1s forwards;
+    animation: hideTask 1s ease 1s forwards;
 }
 
 .taskName {
     font-size: 24px;
     margin-left: 10px;
     position: relative;
+    display: inline-block;
 }
 
 .taskName::after {
@@ -71,7 +72,7 @@ body {
 }
 
 .taskName.strikethrough {
-    animation: hideText 1s ease 1s forwards;
+    animation: hideTask 1s ease 1s forwards;
 }
 
 .descprition {
@@ -82,16 +83,14 @@ body {
 }
 
 .descprition.strikethrough {
-    animation: hideText 1.2s ease 0.6s forwards;
+    animation: hideTask 1.2s ease 0.6s forwards;
 }
 
-@keyframes hideText {
+@keyframes hideTask {
     0% {
-        height: auto;
         opacity: 1;
     }
     100% {
-        height: 0;
         opacity: 0;
     }
 }
@@ -153,4 +152,8 @@ button:hover {
     border: solid #fff 3px;
     border-radius: 15px;
     font-size: 16px;
+}
+
+.tmp {
+    width: calc(100% - 26px);
 }
